--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title> ergotopia </title>
-        <style type="text/css">
-            body 
-            {
-                display: flex;
-                background-color: pink;
-                align-items: center;
-                justify-content: center;
-            }
-        </style>
-        <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-        <script type="module" src="js/main.js"></script>
-    </head>
-    <body>
-
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ergotopia</title>
+</head>
+<body>
+    
+</body>
 </html>
-
